--- a/content/openbanking/tide/index.mdx
+++ b/content/openbanking/tide/index.mdx
@@ -11,7 +11,7 @@ menus:
     weight: 3
 ---
 
-# Create a consent
+# ASPSP page
 
 https://developer.tidebanking.com/sites/developer.tidebanking.com/files/support/LBG_Sandbox_Developers_Guide_V316.pdf
 
