--- a/content/openbanking/bt/index.mdx
+++ b/content/openbanking/bt/index.mdx
@@ -1,4 +1,5 @@
 ---
+templateKey: AspspLayout
 title: "Banca Transilvania"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
@@ -9,5 +10,5 @@ menus:
     weight: 1
 ---
 
-# ASPSP page
+# ASPSP1 page
 
