--- a/content/openbanking/aegeanbalticbank/index.mdx
+++ b/content/openbanking/aegeanbalticbank/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "Aegean Baltic Bank"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/abbank.png
+aspsp: "aegeanbalticbank"
 menus:
   playground: 
     identifier: aegeanbalticbank # identifier for this item (optional)
