--- a/content/openbanking/aliorbank/index.mdx
+++ b/content/openbanking/aliorbank/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "Alior Bank"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/Alior_Bank.svg
+aspsp: "aliorbank"
 menus:
   playground: 
     identifier: aliorbank # identifier for this item (optional)
