--- a/content/openbanking/allianz-bg/index.mdx
+++ b/content/openbanking/allianz-bg/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "Allianz Bank Bulgaria"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/allianz.svg
+aspsp: "allianz-bg"
 menus:
   playground: 
     identifier: allianz-bg # identifier for this item (optional)
