--- a/content/openbanking/alphabank/index.mdx
+++ b/content/openbanking/alphabank/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "Alpha Bank"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/alphaBank_logo.svg
+aspsp: "alphabank"
 menus:
   playground: 
     identifier: alphabank # identifier for this item (optional)
