--- a/content/openbanking/bankinter/index.mdx
+++ b/content/openbanking/bankinter/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "Bankinter Bank"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/Bankinter_Logo.svg
+aspsp: "bankinter"
 menus:
   playground: 
     identifier: bankinter # identifier for this item (optional)
