--- a/content/openbanking/bankofthessaly/index.mdx
+++ b/content/openbanking/bankofthessaly/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "Thessaly Bank"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/bankofthessaly-logo.png
+aspsp: "bankofthessaly"
 menus:
   playground: 
     identifier: bankofthessaly # identifier for this item (optional)
