--- a/content/openbanking/bbva/index.mdx
+++ b/content/openbanking/bbva/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "BBVA Bank"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/BBVA_2019.svg
+aspsp: "bbva"
 menus:
   playground: 
     identifier: bbva # identifier for this item (optional)
