--- a/content/openbanking/bcr/index.mdx
+++ b/content/openbanking/bcr/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "BCR"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/BCR.svg
+aspsp: "bcr"
 menus:
   playground: 
     identifier: bcr # identifier for this item (optional)
