--- a/content/openbanking/bnpparibasfortis/index.mdx
+++ b/content/openbanking/bnpparibasfortis/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "BNP Paribas Fortis"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/bnpf-logo.svg
+aspsp: "bnpparibasfortis"
 menus:
   playground: 
     identifier: bnpparibasfortis # identifier for this item (optional)
