--- a/content/openbanking/bt/index.mdx
+++ b/content/openbanking/bt/index.mdx
@@ -4,6 +4,7 @@ title: "Banca Transilvania"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/Banca_Transilvania_2016.svg
+aspsp: "bt"
 menus:
   playground: 
     identifier: bt # identifier for this item (optional)
