--- a/content/openbanking/caixa/index.mdx
+++ b/content/openbanking/caixa/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "Caixa Bank"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/CaixaBank_logo.svg
+aspsp: "caixa"
 menus:
   playground: 
     identifier: caixa # identifier for this item (optional)
