--- a/content/openbanking/cec/index.mdx
+++ b/content/openbanking/cec/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "CEC Bank"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/CEC_Bank.svg
+aspsp: "cec"
 menus:
   playground: 
     identifier: cec # identifier for this item (optional)
