--- a/content/openbanking/crediteurope/index.mdx
+++ b/content/openbanking/crediteurope/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "Credit Europe Bank"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/Credit_Europe_Bank_Romania.svg
+aspsp: "crediteurope"
 menus:
   playground: 
     identifier: crediteurope # identifier for this item (optional)
