--- a/content/openbanking/erste-austria/index.mdx
+++ b/content/openbanking/erste-austria/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "Erste Austria"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/Erste_Group_logo.svg
+aspsp: "erste-austria"
 menus:
   playground: 
     identifier: erste-austria # identifier for this item (optional)
