--- a/content/openbanking/eurobank/index.mdx
+++ b/content/openbanking/eurobank/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "Eurobank Bank"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/eurobank.svg
+aspsp: "eurobank"
 menus:
   playground: 
     identifier: eurobank # identifier for this item (optional)
