--- a/content/openbanking/fibank/index.mdx
+++ b/content/openbanking/fibank/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "Fibank"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/fibank-logo.svg
+aspsp: "fibank"
 menus:
   playground: 
     identifier: fibank # identifier for this item (optional)
