--- a/content/openbanking/garantibbva/index.mdx
+++ b/content/openbanking/garantibbva/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "Garanti BBVA"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/Garanti_BBVA_Logo.svg
+aspsp: "garantibbva"
 menus:
   playground: 
     identifier: garantibbva # identifier for this item (optional)
