--- a/content/openbanking/ideabank-pl/index.mdx
+++ b/content/openbanking/ideabank-pl/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "Idea Bank"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/Idea_Bank_logo.svg
+aspsp: "ideabank-pl"
 menus:
   playground: 
     identifier: ideabank-pl # identifier for this item (optional)
