--- a/content/openbanking/ing/index.mdx
+++ b/content/openbanking/ing/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "ING Bank"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/ING_Group_NV_Logo.svg
+aspsp: "ing"
 menus:
   playground: 
     identifier: ing # identifier for this item (optional)
