--- a/content/openbanking/kb/index.mdx
+++ b/content/openbanking/kb/index.mdx
@@ -1,9 +1,10 @@
 ---
-templateKey: MdxLayout
+templateKey: AspspLayout
 title: "Komerční banka Czech Republic"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/kb.svg
+aspsp: "kb"
 menus:
   playground: 
     identifier: kb # identifier for this item (optional)
