--- a/content/openbanking/librabank/index.mdx
+++ b/content/openbanking/librabank/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "Libra Internet Bank"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/Libra_Internet_Bank.svg
+aspsp: "librabank"
 menus:
   playground: 
     identifier: librabank # identifier for this item (optional)
