--- a/content/openbanking/otpbank-ro/index.mdx
+++ b/content/openbanking/otpbank-ro/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "OTP Bank"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/otpbank.svg
+aspsp: "otpbank-ro"
 menus:
   playground: 
     identifier: otpbank-ro # identifier for this item (optional)
