--- a/content/openbanking/pekao/index.mdx
+++ b/content/openbanking/pekao/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "Bank Pekao"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/Bank_Pekao_SA_Logo.svg
+aspsp: "pekao"
 menus:
   playground: 
     identifier: pekao # identifier for this item (optional)
