--- a/content/openbanking/pocztowy/index.mdx
+++ b/content/openbanking/pocztowy/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "Bank Pocztowy"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/pocztowy.svg
+aspsp: "pocztowy"
 menus:
   playground: 
     identifier: pocztowy # identifier for this item (optional)
