--- a/content/openbanking/socgen/index.mdx
+++ b/content/openbanking/socgen/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "Société Générale"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/Société_Générale.svg
+aspsp: "socgen"
 menus:
   playground: 
     identifier: socgen # identifier for this item (optional)
