--- a/content/openbanking/triodos/index.mdx
+++ b/content/openbanking/triodos/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "Triodos Bank"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/logo-triodos-bank.svg
+aspsp: "triodos"
 menus:
   playground: 
     identifier: triodos # identifier for this item (optional)
