--- a/content/openbanking/ubb/index.mdx
+++ b/content/openbanking/ubb/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "United Bulgarian Bank"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/ubb.svg
+aspsp: "ubb"
 menus:
   playground: 
     identifier: ubb # identifier for this item (optional)
