--- a/content/openbanking/unicajabanco/index.mdx
+++ b/content/openbanking/unicajabanco/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "Unicaja Bank"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/logounicaja_pc_svg.svg
+aspsp: "unicajabanco"
 menus:
   playground: 
     identifier: unicajabanco # identifier for this item (optional)
