--- a/content/openbanking/unicredit-cz/index.mdx
+++ b/content/openbanking/unicredit-cz/index.mdx
@@ -1,9 +1,10 @@
 ---
-templateKey: MdxLayout
+templateKey: AspspLayout
 title: "UniCredit Bank Czech Republic"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/Raiffeisen.svg
+aspsp: "unicredit-cz"
 menus:
   playground: 
     identifier: unicredit-cz # identifier for this item (optional)
