--- a/content/openbanking/vistabank/index.mdx
+++ b/content/openbanking/vistabank/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "Vista Bank"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/vistabank.svg
+aspsp: "vistabank"
 menus:
   playground: 
     identifier: vistabank # identifier for this item (optional)
