--- a/content/openbanking/volksbank-at/index.mdx
+++ b/content/openbanking/volksbank-at/index.mdx
@@ -1,9 +1,10 @@
 ---
-templateKey: MdxLayout
+templateKey: AspspLayout
 title: "Volksbank Vienna"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/Volksbank_Austria_Logo.svg
+aspsp: "volksbank-at"
 menus:
   playground: 
     identifier: volksbank-at # identifier for this item (optional)
