--- a/content/openbanking/abnamro/index.mdx
+++ b/content/openbanking/abnamro/index.mdx
@@ -1,9 +1,10 @@
 ---
-templateKey: MdxLayout
+templateKey: AspspLayout
 title: "ABN AMRO"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/logo-abn-amro-svg.svg
+aspsp: "abnamro"
 menus:
   playground: 
     identifier: abnamro # identifier for this item (optional)
