--- a/content/openbanking/atticabank/index.mdx
+++ b/content/openbanking/atticabank/index.mdx
@@ -1,9 +1,10 @@
 ---
-templateKey: MdxLayout
+templateKey: AspspLayout
 title: "Attica Bank"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/AtticaBank.png
+aspsp: "atticabank"
 menus:
   playground: 
     identifier: atticabank # identifier for this item (optional)
