--- a/content/openbanking/bankaustria/index.mdx
+++ b/content/openbanking/bankaustria/index.mdx
@@ -1,9 +1,10 @@
 ---
-templateKey: MdxLayout
+templateKey: AspspLayout
 title: "Bank Austria"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/UniCredit.svg
+aspsp: "bankaustria"
 menus:
   playground: 
     identifier: bankaustria # identifier for this item (optional)
