--- a/content/openbanking/bankia/index.mdx
+++ b/content/openbanking/bankia/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "Bankia Bank"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/logo_BANKIA.svg
+aspsp: "bankia"
 menus:
   playground: 
     identifier: bankia # identifier for this item (optional)
