--- a/content/openbanking/bankofscotland/index.mdx
+++ b/content/openbanking/bankofscotland/index.mdx
@@ -1,5 +1,5 @@
 ---
-templateKey: MdxLayout
+templateKey: AspspLayout
 title: "Bank of Scotland"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
