--- a/content/openbanking/bbr/index.mdx
+++ b/content/openbanking/bbr/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "Bulgarian Development Bank"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/bbr.svg
+aspsp: "bbr"
 menus:
   playground: 
     identifier: bbr # identifier for this item (optional)
