--- a/content/openbanking/buddybank/index.mdx
+++ b/content/openbanking/buddybank/index.mdx
@@ -1,9 +1,10 @@
 ---
-templateKey: MdxLayout
+templateKey: AspspLayout
 title: "buddybank"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/buddybank_Power_logo-nero.svg
+aspsp: "buddybank"
 menus:
   playground: 
     identifier: buddybank # identifier for this item (optional)
