--- a/content/openbanking/commerzbank/index.mdx
+++ b/content/openbanking/commerzbank/index.mdx
@@ -1,9 +1,10 @@
 ---
-templateKey: MdxLayout
+templateKey: AspspLayout
 title: "Commerz Bank"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/Commerzbank_2009.svg
+aspsp: "commerzbank"
 menus:
   playground: 
     identifier: commerzbank # identifier for this item (optional)
