--- a/content/openbanking/creditmutuel/index.mdx
+++ b/content/openbanking/creditmutuel/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "Crédit Mutuel"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/Logo_Credit_Mutuel.svg
+aspsp: "creditmutuel"
 menus:
   playground: 
     identifier: creditmutuel # identifier for this item (optional)
