--- a/content/openbanking/deutsche-bank/index.mdx
+++ b/content/openbanking/deutsche-bank/index.mdx
@@ -1,9 +1,10 @@
 ---
-templateKey: MdxLayout
+templateKey: AspspLayout
 title: "Deutsche Bank"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/Deutsche_Bank-Logo.svg
+aspsp: "deutsche-bank"
 menus:
   playground: 
     identifier: deutsche-bank # identifier for this item (optional)
