--- a/content/openbanking/dnb/index.mdx
+++ b/content/openbanking/dnb/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "DNB"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/DNB_ASA_logo.svg
+aspsp: "dnb"
 menus:
   playground: 
     identifier: dnb # identifier for this item (optional)
