--- a/content/openbanking/dskbank/index.mdx
+++ b/content/openbanking/dskbank/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "DSK Bank"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/dskbank.png
+aspsp: "dskbank"
 menus:
   playground: 
     identifier: dskbank # identifier for this item (optional)
