--- a/content/openbanking/epirusbank/index.mdx
+++ b/content/openbanking/epirusbank/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "Epirus Bank"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/epirusbank.png
+aspsp: "epirusbank"
 menus:
   playground: 
     identifier: epirusbank # identifier for this item (optional)
