--- a/content/openbanking/erste-group/index.mdx
+++ b/content/openbanking/erste-group/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "Erste Group"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/Erste_Group_logo.svg
+aspsp: "erste-group"
 menus:
   playground: 
     identifier: erste-group # identifier for this item (optional)
