--- a/content/openbanking/eximbank/index.mdx
+++ b/content/openbanking/eximbank/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "EximBank"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/EximBank.svg
+aspsp: "eximbank"
 menus:
   playground: 
     identifier: eximbank # identifier for this item (optional)
