--- a/content/openbanking/ibm-ob/index.mdx
+++ b/content/openbanking/ibm-ob/index.mdx
@@ -1,5 +1,5 @@
 ---
-templateKey: MdxLayout
+templateKey: AspspLayout
 title: "IBM UK Open Banking"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
