--- a/content/openbanking/ibm-psd2/index.mdx
+++ b/content/openbanking/ibm-psd2/index.mdx
@@ -1,9 +1,10 @@
 ---
-templateKey: MdxLayout
+templateKey: AspspLayout
 title: "IBM PSD2 XS2A"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/IBM_logo.svg
+aspsp: "ibm-psd2"
 menus:
   playground: 
     identifier: ibm-psd2 # identifier for this item (optional)
