--- a/content/openbanking/koba/index.mdx
+++ b/content/openbanking/koba/index.mdx
@@ -1,9 +1,10 @@
 ---
-templateKey: MdxLayout
+templateKey: AspspLayout
 title: "Komerční banka Slovakia"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/kb.svg
+aspsp: "koba"
 menus:
   playground: 
     identifier: koba # identifier for this item (optional)
