--- a/content/openbanking/nordea/index.mdx
+++ b/content/openbanking/nordea/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "Nordea"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/Nordea-logo.svg
+aspsp: "nordea"
 menus:
   playground: 
     identifier: nordea # identifier for this item (optional)
