--- a/content/openbanking/piraeusbank/index.mdx
+++ b/content/openbanking/piraeusbank/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "Piraeus Bank"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/piraeusbank.svg
+aspsp: "piraeusbank"
 menus:
   playground: 
     identifier: piraeusbank # identifier for this item (optional)
