--- a/content/openbanking/postbank-bg/index.mdx
+++ b/content/openbanking/postbank-bg/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "Bulgarian Postbank"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/postbank-bg.svg
+aspsp: "postbank-bg"
 menus:
   playground: 
     identifier: postbank-bg # identifier for this item (optional)
