--- a/content/openbanking/procreditbank-bg/index.mdx
+++ b/content/openbanking/procreditbank-bg/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "ProCredit Bank Bulgaria"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/ProCredit_Bank_Romania.svg
+aspsp: "procreditbank-bg"
 menus:
   playground: 
     identifier: procreditbank-bg # identifier for this item (optional)
