--- a/content/openbanking/procreditbank/index.mdx
+++ b/content/openbanking/procreditbank/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "ProCredit BANK"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/ProCredit_Bank_Romania.svg
+aspsp: "procreditbank"
 menus:
   playground: 
     identifier: procreditbank # identifier for this item (optional)
