--- a/content/openbanking/rabobank/index.mdx
+++ b/content/openbanking/rabobank/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "Rabobank"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/rabobank.svg
+aspsp: "rabobank"
 menus:
   playground: 
     identifier: rabobank # identifier for this item (optional)
