--- a/content/openbanking/raiffeisen-at/index.mdx
+++ b/content/openbanking/raiffeisen-at/index.mdx
@@ -1,9 +1,10 @@
 ---
-templateKey: MdxLayout
+templateKey: AspspLayout
 title: "Raiffeisen Austria"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/Raiffeisen.svg
+aspsp: "raiffeisen-at"
 menus:
   playground: 
     identifier: raiffeisen-at # identifier for this item (optional)
