--- a/content/openbanking/raiffeisen/index.mdx
+++ b/content/openbanking/raiffeisen/index.mdx
@@ -1,9 +1,10 @@
 ---
-templateKey: MdxLayout
+templateKey: AspspLayout
 title: "Raiffeisen"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/Raiffeisen.svg
+aspsp: "raiffeisen"
 menus:
   playground: 
     identifier: raiffeisen # identifier for this item (optional)
