--- a/content/openbanking/tatrabanka/index.mdx
+++ b/content/openbanking/tatrabanka/index.mdx
@@ -1,9 +1,10 @@
 ---
-templateKey: MdxLayout
+templateKey: AspspLayout
 title: "Tatra banka"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/tatrabanka.svg
+aspsp: "tatrabanka"
 menus:
   playground: 
     identifier: tatrabanka # identifier for this item (optional)
