--- a/content/openbanking/ubs/index.mdx
+++ b/content/openbanking/ubs/index.mdx
@@ -1,8 +1,10 @@
 ---
+templateKey: AspspLayout
 title: "UBS"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/UBS_Logo_Semibold.svg
+aspsp: "ubs"
 menus:
   playground: 
     identifier: ubs # identifier for this item (optional)
