--- a/content/openbanking/unicredit-bg/index.mdx
+++ b/content/openbanking/unicredit-bg/index.mdx
@@ -1,9 +1,10 @@
 ---
-templateKey: MdxLayout
+templateKey: AspspLayout
 title: "UniCredit Bulbank"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/unicredit-bg.svg
+aspsp: "unicredit-bg"
 menus:
   playground: 
     identifier: unicredit-bg # identifier for this item (optional)
