--- a/content/openbanking/unicredit-de/index.mdx
+++ b/content/openbanking/unicredit-de/index.mdx
@@ -1,9 +1,10 @@
 ---
-templateKey: MdxLayout
+templateKey: AspspLayout
 title: "UniCredit Bank AG (\"HypoVereinsbank\")"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/unicredit-de.svg
+aspsp: "unicredit-de"
 menus:
   playground: 
     identifier: unicredit-de # identifier for this item (optional)
