--- a/content/openbanking/unicredit-hu/index.mdx
+++ b/content/openbanking/unicredit-hu/index.mdx
@@ -1,9 +1,10 @@
 ---
-templateKey: MdxLayout
+templateKey: AspspLayout
 title: "UniCredit Bank Hungary"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/unicredit-bank.svg
+aspsp: "unicredit-hu"
 menus:
   playground: 
     identifier: unicredit-hu # identifier for this item (optional)
