--- a/content/openbanking/unicredit-it/index.mdx
+++ b/content/openbanking/unicredit-it/index.mdx
@@ -1,9 +1,10 @@
 ---
-templateKey: MdxLayout
+templateKey: AspspLayout
 title: "UniCredit SpA"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/UniCredit.svg
+aspsp: "unicredit-it"
 menus:
   playground: 
     identifier: unicredit-it # identifier for this item (optional)
