--- a/content/openbanking/unicredit-ro/index.mdx
+++ b/content/openbanking/unicredit-ro/index.mdx
@@ -1,9 +1,10 @@
 ---
-templateKey: MdxLayout
+templateKey: AspspLayout
 title: "UniCredit Bank Romania"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/Deutsche_Bank-Logo.svg
+aspsp: "unicredit-ro"
 menus:
   playground: 
     identifier: unicredit-ro # identifier for this item (optional)
