--- a/content/openbanking/unicredit-sk/index.mdx
+++ b/content/openbanking/unicredit-sk/index.mdx
@@ -1,9 +1,10 @@
 ---
-templateKey: MdxLayout
+templateKey: AspspLayout
 title: "UniCredit Bank Slovakia"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/unicredit-bank.svg
+aspsp: "unicredit-sk"
 menus:
   playground: 
     identifier: unicredit-sk # identifier for this item (optional)
