--- a/content/openbanking/zaba/index.mdx
+++ b/content/openbanking/zaba/index.mdx
@@ -1,9 +1,10 @@
 ---
-templateKey: MdxLayout
+templateKey: AspspLayout
 title: "Zagrebačka banka"
 metaTitle: "This is the title tag of this page"
 metaDescription: "This is the meta description"
 icon: assets/img/banks/unicredit-bank.svg
+aspsp: "zaba"
 menus:
   playground: 
     identifier: zaba # identifier for this item (optional)
