get in touch playground

--- a/content/openbanking/playground/index.mdx
+++ b/content/openbanking/playground/index.mdx
@@ -10,7 +10,7 @@ menus:
     weight: 2
 ---
 import Playground from "components/PSD/Playground";
-import StepAccount from 'components/PSD/step-account';
+import GetInTouch from "components/GetInTouch";
 
 ## How is this working?
 ### Behind the scenes
@@ -20,3 +20,4 @@ bla bla bla
 bla bla bla
 
 <Playground />
+<GetInTouch />
