--- a/content/openbanking/playground/index.mdx
+++ b/content/openbanking/playground/index.mdx
@@ -14,10 +14,7 @@ import GetInTouch from "components/GetInTouch";
 
 ## How is this working?
 ### Behind the scenes
-bla bla bla
-
-### Exchange token flow
-bla bla bla
+The backend of the api will fill in all the required secrets and use the QWAC and QSEAL certificates to connect via HTTPS and sign the required payloads.
 
 <Playground />
 <GetInTouch />
