test users table

--- a/content/openbanking/playground/index.mdx
+++ b/content/openbanking/playground/index.mdx
@@ -11,10 +11,30 @@ menus:
 ---
 import Playground from "components/PSD/Playground";
 import GetInTouch from "components/GetInTouch";
+import GradientButton from "components/GradientButton";
+import { Link, navigate } from "@reach/router";
+import ArrowForwardIcon from "@material-ui/icons/ArrowForward";
 
 ## How is this working?
 ### Behind the scenes
 The backend of the api will fill in all the required secrets and use the QWAC and QSEAL certificates to connect via HTTPS and sign the required payloads.
+<br/>
+
+<GradientButton
+    typea="white"
+    size="small"
+    variant="contained"
+    color="primary"
+    component={Link}
+    to="/openbanking/test-users/"
+    href="/openbanking/test-users/"
+    aria-label="Test users"
+    style={{ whiteSpace: "nowrap" }}
+    endIcon={<ArrowForwardIcon />}
+>
+Test users
+</GradientButton>
+<br/><br/>
 
 <Playground />
 <GetInTouch />
