--- a/content/openbanking/bankofscotland/pis.mdx
+++ b/content/openbanking/bankofscotland/pis.mdx
@@ -28,8 +28,7 @@ import StepGetPaymentConsentFundsConfirmation from 'components/PSD/step-get-paym
 import AuthoriseOpenBankingStep from 'components/PSD/step-ob-authorise';
 import StepSubmitOpenBankingPayment from 'components/PSD/step-ob-submit-payment';
 
-PSU Credentials
-===============
+## PSU Credentials
 
 Users registered with Open Banking can test their applications with mock accounts created for the following banks.
 
