--- a/content/openbanking/bt/test-data.mdx
+++ b/content/openbanking/bt/test-data.mdx
@@ -5,8 +5,8 @@ metaTitle: "PSU Credentials"
 metaDescription: "PSU Credentials"
 ---
 
-import ProCreditBGTestDataTable from './test-data-table.mdx';
+import BTTestDataTable from './test-data-table.mdx';
 
 ## PSU Credentials
 
-<ProCreditBGTestDataTable />
+<BTTestDataTable />
