--- a/content/openbanking/ibm-psd2/test-data.mdx
+++ b/content/openbanking/ibm-psd2/test-data.mdx
@@ -1,10 +1,12 @@
 ---
 templateKey: MdxLayoutSimple
+title: "PSU Credentials"
+metaTitle: "PSU Credentials"
+metaDescription: "PSU Credentials"
 ---
 
 import IbmPSD2TestDataTable from './test-data-table.mdx';
 
-PSU Credentials
-===============
+## PSU Credentials
 
 <IbmPSD2TestDataTable />
