--- a/content/openbanking/nordea/test-data.mdx
+++ b/content/openbanking/nordea/test-data.mdx
@@ -1,11 +1,13 @@
 ---
 templateKey: MdxLayoutSimple
+title: "PSU Credentials"
+metaTitle: "PSU Credentials"
+metaDescription: "PSU Credentials"
 ---
 
 import NordeaTestDataTable from './test-data-table.mdx';
 
-PSU Credentials
-===============
+## PSU Credentials
 
 A set of non-real users were created by default.  
 
