--- a/content/openbanking/pocztowy/test-data.mdx
+++ b/content/openbanking/pocztowy/test-data.mdx
@@ -1,10 +1,12 @@
 ---
 templateKey: MdxLayoutSimple
+title: "PSU Credentials"
+metaTitle: "PSU Credentials"
+metaDescription: "PSU Credentials"
 ---
 
 import PocztowyTestDataTable from './test-data-table.mdx';
 
-PSU Credentials
-===============
+## PSU Credentials
 
 <PocztowyTestDataTable />
