--- a/content/openbanking/virgin/pis.mdx
+++ b/content/openbanking/virgin/pis.mdx
@@ -28,8 +28,7 @@ import StepGetPaymentConsentFundsConfirmation from 'components/PSD/step-get-paym
 import AuthoriseOpenBankingStep from 'components/PSD/step-ob-authorise';
 import StepSubmitOpenBankingPayment from 'components/PSD/step-ob-submit-payment';
 
-PSU Credentials
-===============
+## PSU Credentials
 
 [See details here](https://developer.virginmoney.com/faq#n139)
 
