--- a/content/openbanking/bankofthessaly/test-data.mdx
+++ b/content/openbanking/bankofthessaly/test-data.mdx
@@ -1,10 +1,12 @@
 ---
 templateKey: MdxLayoutSimple
+title: "PSU Credentials"
+metaTitle: "PSU Credentials"
+metaDescription: "PSU Credentials"
 ---
 
 
 
-PSU Credentials
-===============
+## PSU Credentials
 
 <ThessalyTestDataTable />
