--- a/content/openbanking/danske/test-data.mdx
+++ b/content/openbanking/danske/test-data.mdx
@@ -1,11 +1,13 @@
 ---
 templateKey: MdxLayoutSimple
+title: "PSU Credentials"
+metaTitle: "PSU Credentials"
+metaDescription: "PSU Credentials"
 ---
 
 import DanskeTestDataTable from './test-data-table.mdx';
 
-PSU Credentials
-===============
+## PSU Credentials
 
 Users registered with Open Banking can test their applications with mock accounts created for the following banks.
 
