--- a/content/openbanking/raiffeisen-at/test-data.mdx
+++ b/content/openbanking/raiffeisen-at/test-data.mdx
@@ -1,5 +1,8 @@
 ---
 templateKey: MdxLayoutSimple
+title: "PSU Credentials"
+metaTitle: "PSU Credentials"
+metaDescription: "PSU Credentials"
 ---
 
 import RaiffeisenAustriaTestDataTable from './test-data-table.mdx';
