--- a/content/openbanking/raiffeisen-sk/test-data.mdx
+++ b/content/openbanking/raiffeisen-sk/test-data.mdx
@@ -1,10 +1,12 @@
 ---
 templateKey: MdxLayoutSimple
+title: "PSU Credentials"
+metaTitle: "PSU Credentials"
+metaDescription: "PSU Credentials"
 ---
 
 import RaiffeisenSKTestDataTable from './test-data-table.mdx';
 
-PSU Credentials
-===============
+## PSU Credentials
 
 <RaiffeisenSKTestDataTable />
