--- a/content/openbanking/bankofthessaly/test-data.mdx
+++ b/content/openbanking/bankofthessaly/test-data.mdx
@@ -4,6 +4,7 @@ title: "PSU Credentials"
 metaTitle: "PSU Credentials"
 metaDescription: "PSU Credentials"
 ---
+import ThessalyTestDataTable from './test-data-table.mdx';
 
 
 
