--- a/content/openbanking/pekao/test-data-table.mdx
+++ b/content/openbanking/pekao/test-data-table.mdx
@@ -5,7 +5,7 @@ templateKey: MdxSnippet
 
 |ID||Password|
 |--- |--- |--- |
-|23871191||B62bKO4sDH|
+|23871191||B62bKO4sDH<br/><br/>1 - B<br/>2 - 6<br/>3 - 2<br/>4 - b<br/>5 - K<br/>6 - O<br/>7 - 4<br/>8 - s<br/>9 - D<br/>10 - H|
 |23871192||VBnSUQOVxN|
 
 In some cases you will be asked for additional SMS code. In that case use ‘000000’ (six zeros) code.
