--- a/content/openbanking/bankinter/ais.mdx
+++ b/content/openbanking/bankinter/ais.mdx
@@ -16,33 +16,34 @@ import StepCreateAccountConsent from 'components/PSD/step-create-account-consent
 import AuthoriseStep from 'components/PSD/step-authorise';
 import CreateToken from 'components/PSD/create-token';
 import RefreshToken from 'components/PSD/refresh-token';
+import SCAStep from 'components/PSD/step-sca';
 import StepAccounts from 'components/PSD/step-accounts';
 import StepAccount from 'components/PSD/step-account';
 import AccountConsentStatus from 'components/PSD/step-account-consent-status';
 import StepTransactions from 'components/PSD/step-transactions';
+import DeleteAccountConsent from 'components/PSD/step-delete-account-consent';
 const requestOverride = {
   "access": {
     "accounts": [
       {
         "iban": "ES6001280000000100000001",
-        "currency": "EUR"
       }
     ],
     "balances": [
       {
         "iban": "ES6001280000000100000001",
-        "currency": "EUR"
       }
     ],
     "transactions": [
       {
         "iban": "ES6001280000000100000001",
-        "currency": "EUR"
       }
     ],
-    "availableAccounts": "allAccounts",
-    "allPsd2": "allAccounts"
+    // "availableAccounts": "allAccounts",
+    // "allPsd2": "allAccounts"
   },
+  // "recurringIndicator": false,
+  // "frequencyPerDay": 1
 };
 
 
@@ -74,6 +75,12 @@ const requestOverride = {
   </step>
   <step>
 
+  ## SCA redirect
+
+  <SCAStep/>
+  </step>
+  <step>
+
   ## Retrieve accounts consent status
 
   <AccountConsentStatus/>
@@ -95,5 +102,11 @@ const requestOverride = {
   ## Get account transactions
 
   <StepTransactions/>
+  </step>
+  <step>
+
+  ## Delete account consent
+
+  <DeleteAccountConsent/>
   </step>
 
