--- a/content/openbanking/bankinter/pis.mdx
+++ b/content/openbanking/bankinter/pis.mdx
@@ -8,64 +8,81 @@ psd2Role: "PIS"
 parameters:
   paymentType: sepa-credit-transfers
 menus:
-  bankinter: 
+  bankinter:
     weight: 2
 ---
 
-
-
-import CreateClientCredentialsToken from 'components/PSD/create-client-credentials-token';
-import StepCreateAccountConsent from 'components/PSD/step-create-account-consent';
-import AuthoriseStep from 'components/PSD/step-authorise';
-import CreateToken from 'components/PSD/create-token';
-import RefreshToken from 'components/PSD/refresh-token';
-import StepAccounts from 'components/PSD/step-accounts';
-import StepAccount from 'components/PSD/step-account';
-import StepInitiatePayment from 'components/PSD/step-initiate-payment';
-import StepPayment from 'components/PSD/step-payment';
-import StepPaymentStatus from 'components/PSD/step-payment-status';
+import CreateClientCredentialsToken from "components/PSD/create-client-credentials-token";
+import StepCreateAccountConsent from "components/PSD/step-create-account-consent";
+import AuthoriseStep from "components/PSD/step-authorise";
+import CreateToken from "components/PSD/create-token";
+import RefreshToken from "components/PSD/refresh-token";
+import StepAccounts from "components/PSD/step-accounts";
+import StepAccount from "components/PSD/step-account";
+import StepInitiatePayment from "components/PSD/step-initiate-payment";
+import SCAStep from 'components/PSD/step-sca';
+import StepPayment from "components/PSD/step-payment";
+import StepPaymentStatus from "components/PSD/step-payment-status";
+import SimpleAlert from "components/SimpleAlert";
 const requestOverride = {
+  creditorAddress: {
+    streetName: 'Fleet Street',
+    buildingNumber: '61A',
+    townName: 'London',
+    postCode: 'EC4Y1',
+    country: 'GB'
+  },
   debtorAccount: {
-    "iban": "ES6001280000000100000001","currency":"EUR"
-  }
+    iban: "ES6001280000000100000001",
+    currency: "EUR",
+  },
 };
 
-
-
+<SimpleAlert color="warning">
+  <span>
+    <b>Warning! -</b> Maximum 5 characters creditorAddress postalCode allowed.
+  </span>
+</SimpleAlert>
+<br/>
   <step>
 
-  ## Authorise consent
+## Authorise consent
 
   <AuthoriseStep/>
   </step>
   <step>
 
-  ## Exchange Token from Code
+## Exchange Token from Code
 
   <CreateToken/>
   </step>
   <step>
 
-  ## Refresh token
+## Refresh token
 
   <RefreshToken/>
   </step>
   <step>
 
-  ## Create a consent
+## Create a consent
 
   <StepInitiatePayment requestOverride={requestOverride} />
   </step>
   <step>
 
-  ## Payment
+  ## SCA redirect
+
+  <SCAStep/>
+  </step>
+  <step>
+
+## Payment
 
   <StepPayment/>
   </step>
   <step>
 
-  ## Payment status
+## Payment status
 
   <StepPaymentStatus/>
   </step>
-
