--- a/content/openbanking/bbva/pis.mdx
+++ b/content/openbanking/bbva/pis.mdx
@@ -22,16 +22,30 @@ import RefreshToken from 'components/PSD/refresh-token';
 import StepAccounts from 'components/PSD/step-accounts';
 import StepAccount from 'components/PSD/step-account';
 import StepInitiatePayment from 'components/PSD/step-initiate-payment';
+import SCAStep from 'components/PSD/step-sca';
 import StepPayment from 'components/PSD/step-payment';
 import StepPaymentStatus from 'components/PSD/step-payment-status';
+import SimpleAlert from "components/SimpleAlert";
 const requestOverride = {
+  creditorAddress: {
+    streetName: 'Fleet Street',
+    buildingNumber: '61A',
+    townName: 'London',
+    postCode: 'EC4Y1',
+    country: 'GB'
+  },
   debtorAccount: {
     "iban": "ES2501822200160201933547","currency":"EUR"
   }
 };
 
 
-
+<SimpleAlert color="warning">
+  <span>
+    <b>Warning! -</b> Maximum 5 characters creditorAddress postalCode allowed.
+  </span>
+</SimpleAlert>
+<br/>
   <step>
 
   ## Authorise consent
@@ -55,6 +69,12 @@ const requestOverride = {
   ## Create a consent
 
   <StepInitiatePayment requestOverride={requestOverride} />
+  </step>
+  <step>
+
+  ## SCA redirect
+
+  <SCAStep/>
   </step>
   <step>
 
