--- a/content/openbanking/bbva/ais.mdx
+++ b/content/openbanking/bbva/ais.mdx
@@ -22,7 +22,7 @@ import StepAccount from 'components/PSD/step-account';
 import AccountConsentStatus from 'components/PSD/step-account-consent-status';
 import StepTransactions from 'components/PSD/step-transactions';
 import DeleteAccountConsent from 'components/PSD/step-delete-account-consent';
-import requestOverride from './aisp-consent-override.json';
+import bbvaRequestOverride from './aisp-consent-override.json';
 
 
 
@@ -49,7 +49,7 @@ import requestOverride from './aisp-consent-override.json';
 
   ## Create a consent
 
-  <StepCreateAccountConsent requestOverride={requestOverride} />
+  <StepCreateAccountConsent requestOverride={bbvaRequestOverride} />
   </step>
   <step>
 
