--- a/content/openbanking/unicredit-ro/ais.mdx
+++ b/content/openbanking/unicredit-ro/ais.mdx
@@ -12,6 +12,7 @@ menus:
 
 import StepCreateAccountConsent from "components/PSD/step-create-account-consent";
 import AuthoriseStep from "components/PSD/step-authorise";
+import SCAStep from 'components/PSD/step-sca';
 import CreateToken from "components/PSD/create-token";
 import RefreshToken from "components/PSD/refresh-token";
 import StepAccounts from "components/PSD/step-accounts";
@@ -60,12 +61,12 @@ const requestOverride = {
 
   <StepCreateAccountConsent requestOverride={requestOverride} />
   </step>
-<step>
+  <step>
 
-## Authorise consent
+  ## SCA redirect
 
-  <AuthoriseStep/>
-</step>
+  <SCAStep/>
+  </step>
   <step>
 
 ## Retrieve accounts consent status
