--- a/content/openbanking/socgen/index.mdx
+++ b/content/openbanking/socgen/index.mdx
@@ -3,7 +3,7 @@ templateKey: AspspLayout
 title: "Société Générale"
 metaTitle: "Société Générale"
 metaDescription: "Developer details for Société Générale"
-icon: assets/img/banks/Société_Générale.svg
+icon: assets/img/banks/Societe_Generale.svg
 aspsp: "socgen-sandbox"
 menus:
   playground: 
