--- a/content/openbanking/bankio/ais.mdx
+++ b/content/openbanking/bankio/ais.mdx
@@ -1,16 +1,16 @@
 ---
 templateKey: docs
-title: "BT Account Information Service (AIS)"
-metaTitle: "BT Account Information Service (AIS)"
-metaDescription: "API playground for BT Account Information Service (AIS)"
-aspsp: "bt-sandbox"
+title: "bankIO Account Information Service (AIS)"
+metaTitle: "bankIO Account Information Service (AIS)"
+metaDescription: "API playground for bankIO Account Information Service (AIS)"
+aspsp: "bankio-dev"
 psd2Role: "AIS"
+parameters:
+  psuID: "user1"
 menus:
-  bt: 
+  bankio: 
     weight: 1
 ---
-
-
 
 
 import CreateClientCredentialsToken from 'components/PSD/create-client-credentials-token';
