--- a/content/openbanking/danske/test-data-table.mdx
+++ b/content/openbanking/danske/test-data-table.mdx
@@ -2,12 +2,7 @@
 templateKey: MdxSnippet
 ---
 
-The password for all mock accounts is **Password123**.
-
-|Brand|Retail|Commercial|Business|
-|--- |--- |--- |--- |
-|Danske Bank|llr001|llc001|llb001|
-|Halifax|har001|N/A|N/A|
-|Bank of Scotland|bar001|bac001|bab001|
-|MBNA|mbr001|N/A|N/A|
+|Login|Password|
+|--- |--- |
+|8195475386|xUKSWPgHy2H2XBt8cv|
 
