--- a/content/openbanking/ing/ais.mdx
+++ b/content/openbanking/ing/ais.mdx
@@ -14,7 +14,7 @@ menus:
 
 import CreateClientCredentialsToken from 'components/PSD/create-client-credentials-token';
 import StepCreateAccountConsent from 'components/PSD/step-create-account-consent';
-import AuthoriseStep from 'components/PSD/step-authorise';
+import SCAStep from 'components/PSD/step-sca';
 import AuthorisationUrlStep from 'components/PSD/step-authorisation-url';
 import CreateToken from 'components/PSD/create-token';
 import RefreshToken from 'components/PSD/refresh-token';
@@ -41,9 +41,9 @@ import StepTransactions from 'components/PSD/step-transactions';
   </step>
   <step>
 
-  ## Authorise consent
+  ## SCA redirect
 
-  <AuthoriseStep/>
+  <SCAStep/>
   </step>
   <step>
 
