--- a/content/openbanking/nationwide/ais.mdx
+++ b/content/openbanking/nationwide/ais.mdx
@@ -12,27 +12,23 @@ menus:
 
 
 
+
 import StepCreateAccountConsent from 'components/PSD/step-create-account-consent';
 import AuthoriseStep from 'components/PSD/step-authorise';
 import CreateClientCredentialsToken from 'components/PSD/create-client-credentials-token';
 import CreateToken from 'components/PSD/create-token';
 import RefreshToken from 'components/PSD/refresh-token';
 import StepAccounts from 'components/PSD/step-accounts';
-import StepInitiateOpenBankingPayment from 'components/PSD/step-ob-initiate-payment';
 import StepAccount from 'components/PSD/step-account';
+import StepInitiateOpenBankingPayment from 'components/PSD/step-ob-initiate-payment';
+import StepPayment from 'components/PSD/step-payment';
+import StepGetPaymentConsent from 'components/PSD/step-get-payment-consent';
+import StepGetPaymentConsentFundsConfirmation from 'components/PSD/step-get-payment-consent-funds-confirmation';
+import AuthoriseOpenBankingStep from 'components/PSD/step-ob-authorise';
+import StepSubmitOpenBankingPayment from 'components/PSD/step-ob-submit-payment';
 import StepTransactions from 'components/PSD/step-transactions';
-
-[Test Data](https://developer-test.raiffeisen.ro/aisp_test_data) - AISP Test Data
-
-| PSU ID     | Password |
-|------------|----------|
-| 9999999999 | 9999     |
-
-
-| PSU ID     | Account Number | Currency | Comment                                                      |
-|------------|----------------|----------|--------------------------------------------------------------|
-| 9999999999 | n/a            | n/a      | No active payment accounts                                   |
-| 9999999998 | 9999999999     | RON      | Account with multiple transactions                           |
+import AccountConsentStatus from 'components/PSD/step-account-consent-status';
+import StepBalances from 'components/PSD/step-balances';
 
   <step>
 
@@ -44,5 +40,47 @@ import StepTransactions from 'components/PSD/step-transactions';
 
   ## Create a consent
 
-  <StepInitiateOpenBankingPayment/>
+  <StepCreateAccountConsent />
+  </step>
+  <step>
+
+  ## Authorise consent
+
+  <AuthoriseOpenBankingStep/>
+  </step>
+  <step>
+
+  ## Exchange Token from Code
+
+  <CreateToken/>
+  </step>
+  <step>
+
+  ## Retrieve accounts consent status
+
+  <AccountConsentStatus/>
+  </step>
+  <step>
+
+  ## Retrieve list of accounts
+
+  <StepAccounts/>
+  </step>
+  <step>
+
+  ## Get account data
+
+  <StepAccount/>
+  </step>
+  <step>
+
+  ## Get account balances
+
+  <StepBalances/>
+  </step>
+  <step>
+
+  ## Get account transactions
+
+  <StepTransactions/>
   </step>
